fix: don't wrap output

--- a/src/styles/blocks/_tree-output.scss
+++ b/src/styles/blocks/_tree-output.scss
@@ -12,6 +12,7 @@
   font-weight: 400;
   line-height: var(--tg-line-height-base);
   resize: none;
+  white-space: pre;
 
   &:focus {
     outline: none;
